--- a/style.css
+++ b/style.css
@@ -109,10 +109,11 @@ body {
   font-size: 0.95rem;
   line-height: 1.5;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   margin: 0;
+  min-height: 3em; /* 2줄 높이 고정 (line-height 1.5 × 2) */
 }
 
 .bubble-time {
